fixed css page layout issue, updated CSS per new html elements.

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -35,14 +35,14 @@
 
 html {
     height: 100%;
-    max-height: 100%;
+
 }
 
 body {
     display: flex;
-    height: 100%;
-    min-height: 100%;
     flex-direction: column;
+    max-height: 100%;
+    min-height: 100%;
     font-size: 16px;
     background-image: url(/Assets/background.jpg);
 }
@@ -52,6 +52,8 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    max-height:20%;
+    min-height: 20%;
     padding: 30px;
     background-color: var(--dark);
     color: var(--dark);
@@ -68,7 +70,9 @@ section {
     flex: 1;
     align-items: center;
     justify-content: center;
-    margin: 8vw;
+    max-height:60%;
+    min-height: 60%;
+    margin: 10vh;
     padding: 3vh;
     color: var(--dark);
     background-color: var(--mid-1);
@@ -76,21 +80,24 @@ section {
 }
 
 .answers {
+    display: flex;
+    flex-direction: column;
     visibility: hidden;
-    list-style: none;
 }
 
 footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    max-height: 20%;
+    min-height: 20%;
     padding: 30px;
     background-color: var(--dark);
     color: var(--dark);
 }
 
 button {
-    font-size: 30px;
+    font-size: 20px;
     font-weight: 500;
     background-color: var(--mid-2);
     padding: 15px;
@@ -103,7 +110,7 @@ button {
     display: flex;
     flex-direction: row;
     align-items: center;
-    font-size: 30px;
+    font-size: 20px;
     font-weight: 500;
     background-color: var(--mid-2);
     padding: 15px;
@@ -119,16 +126,17 @@ h1 {
     padding: 7px;
 }
 
-li {
+#answer1, #answer2, #answer3, #answer4 {
     padding: 10px;
-    margin: 10px;
+    margin: 3px;
+    max-height: 25%;
+    font-size: 15px;
     color: var(--light);
     background-color: var(--mid-2);
     border-radius: 5px;
     transition-duration: 0.3s;
 }
 
-li:hover,
 button:hover {
     box-shadow: 0px 0px 10px 5px var(--light);
 }
